add query validator by status
