# swagger.json
@@ -551,6 +551,19 @@
                     },
                     {
                         "in": "query",
+                        "name": "status",
+                        "required": false,
+                        "type": "string",
+                        "enum": [
+                            "BOND_STATUS_UNSPECIFIED",
+                            "BOND_STATUS_UNBONDED",
+                            "BOND_STATUS_UNBONDING",
+                            "BOND_STATUS_BONDED"
+                        ],
+                        "description": "status"
+                    },
+                    {
+                        "in": "query",
                         "name": "pageLimit",
                         "required": false,
                         "default": 10,
